Added NHibernate repositories Generalized repository classes Abstractions and Models projects combined into Entities project

--- a/src/main/EventApp.UseCases/EventApp.UseCases.csproj
+++ b/src/main/EventApp.UseCases/EventApp.UseCases.csproj
@@ -5,8 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EventApp.Abstractions\EventApp.Abstractions.csproj" />
-    <ProjectReference Include="..\EventApp.Models\EventApp.Models.csproj" />
+    <ProjectReference Include="..\EventApp.Abstractions\EventApp.Entities.csproj" />
   </ItemGroup>
 
 </Project>
