--- a/src/main/EventApp.InterfaceAdapters/EventApp.InterfaceAdapters.csproj
+++ b/src/main/EventApp.InterfaceAdapters/EventApp.InterfaceAdapters.csproj
@@ -5,7 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EventApp.Abstractions\EventApp.Abstractions.csproj" />
+    <PackageReference Include="FluentNHibernate" Version="3.1.0" />
+    <PackageReference Include="NHibernate" Version="5.3.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EventApp.Abstractions\EventApp.Entities.csproj" />
   </ItemGroup>
 
 </Project>
