Got rid of interfaces. Added base Entity class. Changed Id type to Guid.

--- a/src/main/EventApp.InterfaceAdapters/EventApp.InterfaceAdapters.csproj
+++ b/src/main/EventApp.InterfaceAdapters/EventApp.InterfaceAdapters.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="NHibernate" Version="5.3.8" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EventApp.Entities\EventApp.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
