--- a/src/main/EventApp.UseCases/EventApp.UseCases.csproj
+++ b/src/main/EventApp.UseCases/EventApp.UseCases.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EventApp.Entities\EventApp.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
