--- a/src/main/EventApp.UseCases/EventApp.UseCases.csproj
+++ b/src/main/EventApp.UseCases/EventApp.UseCases.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CSharpFunctionalExtensions" Version="2.17.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\EventApp.Entities\EventApp.Entities.csproj" />
   </ItemGroup>
 
