--- a/src/main/99_Tests/EventApp.UseCases.Tests/EventApp.UseCases.Tests.csproj
+++ b/src/main/99_Tests/EventApp.UseCases.Tests/EventApp.UseCases.Tests.csproj
@@ -15,8 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EventApp.Entities\EventApp.Entities.csproj" />
-    <ProjectReference Include="..\EventApp.UseCases\EventApp.UseCases.csproj" />
+    <ProjectReference Include="..\..\01_Entities\EventApp.Entities\EventApp.Entities.csproj" />
+    <ProjectReference Include="..\..\02_UseCases\EventApp.UseCases\EventApp.UseCases.csproj" />
   </ItemGroup>
 
 </Project>
