--- a/src/main/03_InterfaceAdapters/EventApp.InterfaceAdapters.DataStorage/EventApp.InterfaceAdapters.DataStorage.csproj
+++ b/src/main/03_InterfaceAdapters/EventApp.InterfaceAdapters.DataStorage/EventApp.InterfaceAdapters.DataStorage.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EventApp.Entities\EventApp.Entities.csproj" />
+    <ProjectReference Include="..\..\01_Entities\EventApp.Entities\EventApp.Entities.csproj" />
   </ItemGroup>
 
 </Project>
