--- a/src/main/03_InterfaceAdapters/EventApp.InterfaceAdapters.RestApi/EventApp.InterfaceAdapters.RestApi.csproj
+++ b/src/main/03_InterfaceAdapters/EventApp.InterfaceAdapters.RestApi/EventApp.InterfaceAdapters.RestApi.csproj
@@ -13,6 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
     <PackageReference Include="MySql.Data" Version="8.0.25" />
   </ItemGroup>
