--- a/src/main/03_InterfaceAdapters/EventApp.InterfaceAdapters.RestApi/Properties/launchSettings.json
+++ b/src/main/03_InterfaceAdapters/EventApp.InterfaceAdapters.RestApi/Properties/launchSettings.json
@@ -4,24 +4,21 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:61514",
-      "sslPort": 44344
+      "applicationUrl": "http://localhost:5000"
     }
   },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "EventApp.InterfaceAdapters.RestApi": {
       "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "weatherforecast",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "launchBrowser": false,
+      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
