--- a/src/main/03_InterfaceAdapters/EventApp.InterfaceAdapters.DataStorage/EventApp.InterfaceAdapters.DataStorage.csproj
+++ b/src/main/03_InterfaceAdapters/EventApp.InterfaceAdapters.DataStorage/EventApp.InterfaceAdapters.DataStorage.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\01_Entities\EventApp.Entities\EventApp.Entities.csproj" />
+    <ProjectReference Include="..\..\01_Models\EventApp.Models\EventApp.Models.csproj" />
   </ItemGroup>
 
 </Project>
