--- a/src/main/99_Tests/EventApp.UseCases.Tests/EventApp.UseCases.Tests.csproj
+++ b/src/main/99_Tests/EventApp.UseCases.Tests/EventApp.UseCases.Tests.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\01_Entities\EventApp.Entities\EventApp.Entities.csproj" />
+    <ProjectReference Include="..\..\01_Models\EventApp.Models\EventApp.Models.csproj" />
     <ProjectReference Include="..\..\02_UseCases\EventApp.UseCases\EventApp.UseCases.csproj" />
   </ItemGroup>
 
