--- a/src/main/04_Frameworks/EventApp.Frameworks.WebClient/package.json
+++ b/src/main/04_Frameworks/EventApp.Frameworks.WebClient/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^5.0.0",
     "styled-components": "^5.3.0",
     "typescript": "~4.1.5"
   },
